--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="icon" sizes="192x192" href="src/img/icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="src/img/icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
